Cleanup some minor issues reported by the error-prone tool.